force-app/main/default/objects/x7s_qstn__Questionnaire_Question__c/fields/x7s_qstn__Answer_1__c.field-meta.xml
<CustomField>
    <fullName>x7s_qstn__Answer_1__c</fullName>
    <inlineHelpText>1st answer/response/choice. Required</inlineHelpText>
    <label>Answer 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>