force-app/main/default/objects/x7s_qstn__Questionnaire_Question__c/fields/x7s_qstn__Answer_2__c.field-meta.xml
<CustomField>
    <fullName>x7s_qstn__Answer_2__c</fullName>
    <inlineHelpText>2nd answer/response/choice. Required</inlineHelpText>
    <label>Answer 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>