force-app/main/default/objects/x7s_qstn__Questionnaire_Question__c/fields/x7s_qstn__Answer_3__c.field-meta.xml
<CustomField>
    <fullName>x7s_qstn__Answer_3__c</fullName>
    <inlineHelpText>3rd answer/response/choice. Optional</inlineHelpText>
    <label>Answer 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>