force-app/main/default/objects/x7s_qstn__Questionnaire_Question__c/fields/x7s_qstn__Flow_Scenario__c.field-meta.xml
<CustomField>
    <fullName>x7s_qstn__Flow_Scenario__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The questionnaire the question is associated with</inlineHelpText>
    <label>Questionnaire</label>
    <referenceTo>x7s_qstn__Questionnaire__c</referenceTo>
    <relationshipLabel>Questions</relationshipLabel>
    <relationshipName>Flow_Items</relationshipName>
    <type>Lookup</type>
</CustomField>