force-app/main/default/objects/x7s_qstn__Questionnaire_Question__c/fields/x7s_qstn__Header_Image_Question__c.field-meta.xml
<CustomField>
    <fullName>x7s_qstn__Header_Image_Question__c</fullName>
    <inlineHelpText>Enter the name of an image-based static resource here to use it as the header of a specific question.</inlineHelpText>
    <label>Header Image</label>
    <length>100</length>
    <type>Text</type>
</CustomField>