force-app/main/default/objects/x7s_qstn__Questionnaire_Question__c/fields/x7s_qstn__Item_Text__c.field-meta.xml
<CustomField>
    <fullName>x7s_qstn__Item_Text__c</fullName>
    <inlineHelpText>Question to be displayed to the user</inlineHelpText>
    <label>Question</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>