force-app/main/default/objects/x7s_qstn__Questionnaire_Question__c/fields/x7s_qstn__Script_Text__c.field-meta.xml
<CustomField>
    <fullName>x7s_qstn__Script_Text__c</fullName>
    <inlineHelpText>Text to be shown to the agent or internal user, if configured in the flow</inlineHelpText>
    <label>Script Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>