force-app/main/default/objects/x7s_qstn__Questionnaire_Question__c/listViews/x7s_qstn__All.listView-meta.xml
<ListView>
    <fullName>x7s_qstn__All</fullName>
    <columns>NAME</columns>
    <columns>x7s_qstn__Flow_Scenario__c</columns>
    <columns>x7s_qstn__Item_Text__c</columns>
    <columns>x7s_qstn__Header_Image_Question__c</columns>
    <columns>x7s_qstn__SLDS_Icon__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>